--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.9.2:
+ - Allow depth_unit to be None w/o Error
+ - add_tracks/axes/data now return the items finally added
 v0.9.1:
  - Add README.md
  - Change `depth` to `show_depth` and `depth_range` to `depth` in interface
