--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.9.3:
+ - combine_tracks() now allows you to use new tracks and functions like add_tracks
+   (only the first argument can be a Data or Axis as well)
 v0.9.2:
  - Allow depth_unit to be None w/o Error
  - add_tracks/axes/data now return the items finally added
