--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 v0.9.10:
  - add crossplot function to plotly renderer
- - unify depths and add depth index to Graph (incoming)
+ - get_data and get_depth now take an optional second argument to slice_by_depth
 v0.9.9:
  - support welly objects in initialization
 v0.9.5:
