Add priority to merge

--- a/tests/test_to_las.ipynb
+++ b/tests/test_to_las.ipynb
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[<pozo.tracks.Track at 0x7ff491d3f250>]"
+       "[<pozo.tracks.Track at 0x7b1cc813ac90>]"
       ]
      },
      "execution_count": 3,
@@ -463,16 +463,7 @@
     {
      "data": {
       "text/plain": [
-       "[CurveItem(mnemonic=\"DEPT:2\", unit=\"M\", value=\"\", descr=\"2  Measured Depth\", original_mnemonic=\"DEPT\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"CGR\", unit=\"GAPI\", value=\"\", descr=\"4  Computed Gamma-Ray (Thorium + Potassium)\", original_mnemonic=\"CGR\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"DT\", unit=\"US/F\", value=\"\", descr=\"6  Delta T\", original_mnemonic=\"DT\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"ILD\", unit=\"OHMM\", value=\"\", descr=\"8  Induction Deep Resistivity\", original_mnemonic=\"ILD\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"LLD\", unit=\"OHMM\", value=\"\", descr=\"10  Laterolog Deep Resistivity\", original_mnemonic=\"LLD\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"MSFL\", unit=\"OHMM\", value=\"\", descr=\"12  Micro Spherically Focused Log\", original_mnemonic=\"MSFL\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"PEF\", unit=\"\", value=\"\", descr=\"14  Photoelectric Factor\", original_mnemonic=\"PEF\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"RHOB\", unit=\"G/C3\", value=\"\", descr=\"16  Compensated Formation Density Log\", original_mnemonic=\"RHOB\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"SGR\", unit=\"GAPI\", value=\"\", descr=\"18  Spectral Gamma-Ray\", original_mnemonic=\"SGR\", data.shape=(12022,)),\n",
-       " CurveItem(mnemonic=\"THOR\", unit=\"\", value=\"\", descr=\"20  Thorium\", original_mnemonic=\"THOR\", data.shape=(12022,))]"
+       "[]"
       ]
      },
      "metadata": {},
@@ -497,26 +488,16 @@
        "  HeaderItem(mnemonic=\"OS\", unit=\"\", value=\"\", descr=\"Services\"),\n",
        "  HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"\", descr=\"Service company\"),\n",
        "  HeaderItem(mnemonic=\"DATE\", unit=\"\", value=\"\", descr=\"Date\")],\n",
-       " 'Curves': [CurveItem(mnemonic=\"DEPT:2\", unit=\"M\", value=\"\", descr=\"2  Measured Depth\", original_mnemonic=\"DEPT\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"CGR:1\", unit=\"GAPI\", value=\"\", descr=\"4  Computed Gamma-Ray (Thorium + Potassium)\", original_mnemonic=\"CGR\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"DT:1\", unit=\"US/F\", value=\"\", descr=\"6  Delta T\", original_mnemonic=\"DT\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"ILD:1\", unit=\"OHMM\", value=\"\", descr=\"8  Induction Deep Resistivity\", original_mnemonic=\"ILD\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"LLD:1\", unit=\"OHMM\", value=\"\", descr=\"10  Laterolog Deep Resistivity\", original_mnemonic=\"LLD\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"MSFL\", unit=\"OHMM\", value=\"\", descr=\"12  Micro Spherically Focused Log\", original_mnemonic=\"MSFL\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"PEF\", unit=\"\", value=\"\", descr=\"14  Photoelectric Factor\", original_mnemonic=\"PEF\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"RHOB:1\", unit=\"G/C3\", value=\"\", descr=\"16  Compensated Formation Density Log\", original_mnemonic=\"RHOB\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"SGR\", unit=\"GAPI\", value=\"\", descr=\"18  Spectral Gamma-Ray\", original_mnemonic=\"SGR\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"THOR\", unit=\"\", value=\"\", descr=\"20  Thorium\", original_mnemonic=\"THOR\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"GR\", unit=\"GAPI\", value=\"\", descr=\"Gamma-Ray Log\", original_mnemonic=\"GR\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"CGR:2\", unit=\"GAPI\", value=\"\", descr=\"Computed Gamma-Ray (Thorium + Potassium)\", original_mnemonic=\"CGR\", data.shape=(12022,)),\n",
+       " 'Curves': [CurveItem(mnemonic=\"GR\", unit=\"GAPI\", value=\"\", descr=\"Gamma-Ray Log\", original_mnemonic=\"GR\", data.shape=(12022,)),\n",
+       "  CurveItem(mnemonic=\"CGR\", unit=\"GAPI\", value=\"\", descr=\"Computed Gamma-Ray (Thorium + Potassium)\", original_mnemonic=\"CGR\", data.shape=(12022,)),\n",
        "  CurveItem(mnemonic=\"CALI\", unit=\"CM\", value=\"\", descr=\"Caliper Log\", original_mnemonic=\"CALI\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"LLD:2\", unit=\"OHMM\", value=\"\", descr=\"Laterolog Deep Resistivity\", original_mnemonic=\"LLD\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"ILD:2\", unit=\"OHMM\", value=\"\", descr=\"Induction Deep Resistivity\", original_mnemonic=\"ILD\", data.shape=(12022,)),\n",
+       "  CurveItem(mnemonic=\"LLD\", unit=\"OHMM\", value=\"\", descr=\"Laterolog Deep Resistivity\", original_mnemonic=\"LLD\", data.shape=(12022,)),\n",
+       "  CurveItem(mnemonic=\"ILD\", unit=\"OHMM\", value=\"\", descr=\"Induction Deep Resistivity\", original_mnemonic=\"ILD\", data.shape=(12022,)),\n",
        "  CurveItem(mnemonic=\"ILM\", unit=\"OHMM\", value=\"\", descr=\"Medium Induction Log\", original_mnemonic=\"ILM\", data.shape=(12022,)),\n",
        "  CurveItem(mnemonic=\"LLS\", unit=\"OHMM\", value=\"\", descr=\"Shallow Laterolog\", original_mnemonic=\"LLS\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"RHOB:2\", unit=\"G/C3\", value=\"\", descr=\"Compensated Formation Density Log\", original_mnemonic=\"RHOB\", data.shape=(12022,)),\n",
+       "  CurveItem(mnemonic=\"RHOB\", unit=\"G/C3\", value=\"\", descr=\"Compensated Formation Density Log\", original_mnemonic=\"RHOB\", data.shape=(12022,)),\n",
        "  CurveItem(mnemonic=\"NPHI\", unit=\"PU%\", value=\"\", descr=\"Neutron Log Porosity\", original_mnemonic=\"NPHI\", data.shape=(12022,)),\n",
-       "  CurveItem(mnemonic=\"DT:2\", unit=\"US/F\", value=\"\", descr=\"Delta T\", original_mnemonic=\"DT\", data.shape=(12022,)),\n",
+       "  CurveItem(mnemonic=\"DT\", unit=\"US/F\", value=\"\", descr=\"Delta T\", original_mnemonic=\"DT\", data.shape=(12022,)),\n",
        "  CurveItem(mnemonic=\"TEST\", unit=\"ohm\", value=\"\", descr=\"\", original_mnemonic=\"TEST\", data.shape=(12022,))],\n",
        " 'Parameter': [HeaderItem(mnemonic=\"BLI\", unit=\"M\", value=\"1831.54\", descr=\"Bottom log interv\"),\n",
        "  HeaderItem(mnemonic=\"TLI\", unit=\"M\", value=\"0.0\", descr=\"Top log interval\")],\n",
