--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.9.27:
+ - Bugfixes, see commits
 v0.9.26:
  - TreeTable() renderer now better organized and with options
  - cpus=1 on makemovie now turns off parallel library
